--- a/2 - css syntax/index.html
+++ b/2 - css syntax/index.html
@@ -8,7 +8,7 @@
     <title>CSS Syntax</title>
 </head>
 <body>
-    <h1 style="background-color: yellow;">How to link CSS with HTML pages</h1>
+    <h1>How to link CSS with HTML pages</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam tenetur repellat illo laboriosam dolores sunt,
         excepturi minus dicta suscipit reiciendis cumque enim esse quas odio tempora itaque consequuntur maxime aut?</p>
 </body>
