--- a/8 - padding/index.html
+++ b/8 - padding/index.html
@@ -15,5 +15,10 @@
             <p>Block element</p>
         </div>
     </div>
+
+    <div class="buttons">
+        <button class="button">I'm a button</button>
+        <button class="button crazy-borders">I'm a button</button>
+    </div>
 </body>
 </html>
