--- a/8 - padding/index.html
+++ b/8 - padding/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1 class="title">Padding</h1>
+    <!-- <h1 class="title">Padding</h1>
     <div class="background">
         <div class="block">
             <p>Block element</p>
@@ -19,6 +19,8 @@
     <div class="buttons">
         <button class="button">I'm a button</button>
         <button class="button crazy-borders">I'm a button</button>
-    </div>
+    </div> -->
+    <div class="box-model bg-green content-box"></div>
+    <div class="box-model bg-red border-box"></div>
 </body>
 </html>
