--- a/16 - position/position-relative.html
+++ b/16 - position/position-relative.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="box box-1"></div>
-    <div class="box box-2"></div>
+    <div class="box-relative box-1">BOX 1</div>
+    <div class="box-relative box-2">BOX 1</div>
 </body>
 </html>
