height auto vs %, more notes

--- a/20 - css units/index.html
+++ b/20 - css units/index.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
-        <div class="container">
+        <!-- <div class="container">
             <h1 class="title">em vs rem</h1>
             <a href="#" class="link">I'm a button</a>
-        </div>
+        </div> -->
         <div class="container">
             <h1 class="title">% vs auto</h1>
             <div class="parent-box">
